--- a/angular.json
+++ b/angular.json
@@ -90,6 +90,8 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/@fortawesome/fontawesome-free/css/all.css",
+              "node_modules/font-awesome/css/font-awesome.min.css",
               "src/styles.scss"
             ],
             "scripts": []
@@ -97,5 +99,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "d39b9f7f-4de7-40b8-a2a7-833eaa6704b3"
   }
 }
