--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --port 4300 --open",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
@@ -11,6 +11,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^17.3.0",
+    "@angular/cdk": "^19.1.3",
     "@angular/common": "^17.3.0",
     "@angular/compiler": "^17.3.0",
     "@angular/core": "^17.3.0",
@@ -18,6 +19,27 @@
     "@angular/platform-browser": "^17.3.0",
     "@angular/platform-browser-dynamic": "^17.3.0",
     "@angular/router": "^17.3.0",
+    "@fortawesome/fontawesome-free": "^6.7.2",
+    "@fullcalendar/angular": "^6.0.3",
+    "@fullcalendar/core": "^6.0.3",
+    "@fullcalendar/daygrid": "^6.0.3",
+    "@fullcalendar/interaction": "^6.0.3",
+    "@fullcalendar/timegrid": "^6.0.3",
+    "@stomp/ng2-stompjs": "^8.0.0",
+    "@stomp/stompjs": "^7.0.0",
+    "@types/jwt-decode": "^2.2.1",
+    "@types/uuid": "^10.0.0",
+    "chart.js": "^3.3.2",
+    "date-fns": "^3.6.0",
+    "install": "^0.13.0",
+    "jwt-decode": "^4.0.0",
+    "moment": "^2.30.1",
+    "node-polyfill-webpack-plugin": "^4.0.0",
+    "npm": "^10.9.2",
+    "primeflex": "^3.3.1",
+    "primeicons": "6.0.1",
+    "primeng": "17.2.0",
+    "quill": "2.0.0-rc.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
@@ -26,7 +48,9 @@
     "@angular-devkit/build-angular": "^17.3.5",
     "@angular/cli": "^17.3.5",
     "@angular/compiler-cli": "^17.3.0",
+    "@fortawesome/fontawesome-free": "^6.7.2",
     "@types/jasmine": "~5.1.0",
+    "@types/pdfjs-dist": "^2.10.377",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
