--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "private": true,
   "dependencies": {
+    "14": "^3.1.6",
     "@angular/animations": "^17.3.0",
     "@angular/cdk": "^19.1.3",
     "@angular/common": "^17.3.0",
@@ -34,6 +35,7 @@
     "install": "^0.13.0",
     "jwt-decode": "^4.0.0",
     "moment": "^2.30.1",
+    "ngx-mask": "^14.3.3",
     "node-polyfill-webpack-plugin": "^4.0.0",
     "npm": "^10.9.2",
     "primeflex": "^3.3.1",
